tests/reject/where_unknown_pred.hi
fn g(x: $T) -> $T where fancy(T):
    return x

fn main():
    println(str(g(1)))
